kubernetes-acm/overlays/local-cluster/todo_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi-deployment
  labels:
    app: todoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
        - name: todoapi
          image: melmanmankiewicz/todo_api:3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todoapi-service
spec:
  selector:
    app: todoapi
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
