kubernetes-acm/overlays/local-cluster/todo_api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todoapi-route
spec:
  path: /
  to:
    kind: Service
    name: todoapi-service
  port:
    targetPort: 8081
